<resources>
    <string name="app_name">OPSC_Part2</string>
    <string name="welcome_message">Welcome to HomeSense!</string>
    <string name="settings_label">Settings</string>
    <string name="dark_mode_label">Dark Mode</string>
    <string name="notifications_label">Notifications</string>
    <string name="language_label">Language</string>
    <string name="logout_label">Logout</string>
    <string name="dashboard_label">Dashboard</string>
    <string name="welcome_back_label">Welcome back, tristan</string>
    <string name="lights_label">Lights</string>
    <string name="doors_label">Doors</string>
    <string name="sensor_label">Sensor</string>
    <string name="gas_label">Gas</string>
    <string name="light_label">Light</string>
    <string name="humidity_label">Humidity</string>
    <string name="motion_label">Motion</string>
    <string name="lockdown_label">Lockdown</string>
    <string name="open_door_label">Open Door</string>
    <string name="outside_light_label">Outside Light</string>
    <string name="inside_light_label">Inside Light</string>
    <string name="stop_lockdown_label">Stop Lockdown</string>
    <string name="enter_username_label">Enter Username...</string>
    <string name="enter_password_label">Enter Password...</string>
    <string name="login_label">Login</string>
    <string name="fingerprint_label">Fingerprint</string>
    <string name="register_label">Register</string>
    <string name="confirm_password_label">Confirm Password...</string>
    <string name="ring_buzzer_label">Ring Buzzer</string>
    <string name="photocell_label">Photocell</string>
    <string name="detected_label">Detected</string>
    <string name="google_label">Google</string>
    <string name="default_web_client_id">289949896676-ga9hdlcaurtoa42gf0vki65q3n5fospr.apps.googleusercontent.com
</string></resources>
