<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imgBackLogin"
        android:layout_width="420dp"
        android:layout_height="250dp"
        android:foregroundGravity="top"
        android:src="@drawable/wave_new"
        tools:layout_editor_absoluteX="-7dp"
        tools:layout_editor_absoluteY="-7dp" />

    <EditText
        android:id="@+id/txtUserLogin"
        android:layout_width="298dp"
        android:layout_height="45dp"
        android:layout_marginStart="59dp"
        android:layout_marginTop="328dp"
        android:layout_marginEnd="59dp"
        android:layout_marginBottom="369dp"
        android:background="@drawable/rounded_corner"
        android:drawableLeft="@drawable/username_ic"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/enter_username_label"
        android:inputType="text"
        android:paddingLeft="10dp"
        android:text=""
        android:textSize="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtPassLogin"
        android:layout_width="298dp"
        android:layout_height="45dp"
        android:layout_marginStart="59dp"
        android:layout_marginTop="402dp"
        android:layout_marginEnd="59dp"
        android:layout_marginBottom="295dp"
        android:background="@drawable/rounded_corner"
        android:drawableLeft="@drawable/password_ic"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/enter_password_label"
        android:inputType="text"
        android:paddingLeft="10dp"
        android:text=""
        android:textSize="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="149dp"
        android:layout_marginTop="474dp"
        android:layout_marginEnd="150dp"
        android:layout_marginBottom="204dp"
        android:backgroundTint="#2158df"
        android:text="@string/login_label"
        android:textSize="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnRegisterLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="134dp"
        android:layout_marginTop="598dp"
        android:layout_marginEnd="134dp"
        android:layout_marginBottom="80dp"
        android:backgroundTint="#749cff"
        android:text="@string/register_label"
        android:textColor="@color/black"
        android:textSize="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnFingerprint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="131dp"
        android:layout_marginTop="527dp"
        android:layout_marginEnd="131dp"
        android:layout_marginBottom="156dp"
        android:backgroundTint="#2158df"
        android:text="@string/fingerprint_label"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgLogHeading"
        android:layout_width="282dp"
        android:layout_height="253dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="65dp"
        android:layout_marginBottom="428dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/homesense_whole_logo" />


</androidx.constraintlayout.widget.ConstraintLayout>